--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/typography": "^0.5.10",
     "@tinymce/tinymce-react": "^6.0.0",
+    "axios": "^1.8.2",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
